--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>  
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\alamd\Downloads\1621671711779.jpg" alt="My Image"></td>
+                <td><img src="1621671711779.jpg" alt="My Image"></td>
                 <td>
                     <h1>Aftab Alam</h1>
                     <p>Computer Science Student</p>
