--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>  
         <table cellspacing="20">
             <tr>
-                <td><img src="1621671711779.jpg" alt="My Image"></td>
+                <td><img src="https://raw.githubusercontent.com/Aftabalam162/cv/997b08fa8a15e21072bfcf1ee144bb05e6cb73fb/1621671711779.jpg" alt="My Image"></td>
                 <td>
                     <h1>Aftab Alam</h1>
                     <p>Computer Science Student</p>
