--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
         <img class="top-cloud" src="assets/cloud.png" alt="cloud">
         <h1>I'm Aftab</h1>
-        <p>a web developer...</p>
+        <h2 id="sub-heading">a web developer...</h2>
         <img class="bottom-cloud" src="assets/cloud.png" alt="cloud">
         <img class="mountain" src="assets/mountain.png" alt="mountain">
     </div>
@@ -21,59 +21,62 @@
     
     <div class="middle-container">
         <div class="profile">
-            <img src="assets/profile-pic.jpg" alt="my-pic">
-            <h1>Aftab Alam</h1>
-            <p>Turning the impossible ideas into reality! Making fast and secure websites to acquire more eyerolls </p>
+            <img src="assets/profile-pic.jpg" alt="my-pic" style="border-radius: 50%;">
+            <h1 style="line-height: 0.5;">Aftab Alam</h1>
+            <h2>Turning the impossible ideas into reality! Making fast and secure websites to acquire more eyerolls </h2>
         </div>
+        <hr>
         <div class="skills">
             <div class="skill-row">
-                <img src="assets/html5.png" alt="">
-                <h1>HTML</h1>
+                <img src="assets/html5.png" class="html">
+                <h3>HTML</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sint magnam voluptatem! Voluptates dolorum illo quisquam eos aut aperiam eaque.</p>
             </div>
             <div class="skill-row">
-                <img src="assets/css.png" alt="">
-                <h1>CSS</h1>
+                <img src="assets/css.png" class="css">
+                <h3>CSS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
             <div class="skill-row">
-                <img src="assets/bootstrap.png" alt="">
-                <h1>Bootstrap</h1>
+                <img src="assets/bootstrap.png" class="bootstrap">
+                <h3>Bootstrap</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
             <div class="skill-row">
-                <img src="assets/javascript.png" alt="">
-                <h1>Javascript</h1>
+                <img src="assets/javascript.png" class="javascript">
+                <h3>Javascript</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
             <div class="skill-row"> 
-                <img src="assets/jquery.png" alt="">
-                <h1>Jquery</h1>
+                <img src="assets/jquery.png" class="jquery">
+                <h3>Jquery</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
             <div class="skill-row"> 
-                <img src="assets/nodejs.png" alt="">
-                <h1>NodeJS</h1>
+                <img src="assets/nodejs.png" class="nodejs">
+                <h3>NodeJS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
             <div class="skill-row"> 
-                <img src="assets/react.png" alt="">
-                <h1>ReactJS</h1>
+                <img src="assets/react.png" class="react">
+                <h3>ReactJS</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem perspiciatis inventore dolore sit! Aspernatur voluptate asperiores nisi maiores dolore ab?</p>
             </div>
+            <hr>
         </div>
         <div class="contact-me">
-            <h1></h1>
-            <p></p>
+            <h1 style="font-size: 40px;">Contact Me</h1>
+            <p>Ping my inbox through any media and I will try to reach you out as soon as possible </p>
             <a href="mailto:name@gmail.com" class="btn"> Contact Me </a>
         </div>
         
     </div>
 
     <div class="bottom-container">
-        <a href="https://www.facebook.com" class="footer-link"></a>
-        <a href="https://www.facebook.com" class="footer-link"></a>
-        <a href="https://www.facebook.com" class="footer-link"></a>
+        <a href="https://www.facebook.com" class="footer-link"> Facebook</a>
+        <a href="https://www.reddit.com" class="footer-link"> Reddit</a>
+        <a href="https://www.discord.com" class="footer-link"> Discord</a>
+        <a href="https://www.twitter.com" class="footer-link"> Twitter</a>
         <p> Copyright 2022 Aftab Alam</p>
 
     </div>
