URL underline removed and mailto feature added

--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
 
         <div class="portfolio">
             <div class="project">
-                <a href="https://aftabalam162.github.io/50-projects/ip-address-tracker/" >
+                <a href="https://aftabalam162.github.io/50-projects/ip-address-tracker/" style="text-decoration: none;">
                 <img src="assets/iptracker.png" class="proImage">
                 <h1>IP Address Tracker</h1> </a>
                 <p>This single page web application uses Ipify API and GeoIpify API to search for the map, brought the map from mapbox and displays the IP address details. </p>
             </div>
             <div class="project">
-                <a href="http://bookyourticket.epizy.com/login.php" >
+                <a href="http://bookyourticket.epizy.com/login.php" style="text-decoration: none;">
                 <img src="assets/bookticket.png" class="proImage"></img>
                 <h1>Ticket Booking App</h1></a>
                 <p>Using PHP, this application lets you book your ticket and stores the data on MySQL server. All the data can be retrieved as well to see past bookings.</p>
             </div>
             <div class="project">
-                <a href="https://aftabalam162.github.io/50-projects/advice-generator/" ><img src="assets/advice-generator.png" class="proImage">
+                <a href="https://aftabalam162.github.io/50-projects/advice-generator/" style="text-decoration: none;"><img src="assets/advice-generator.png" class="proImage">
                 <h1>Advice Generator</h1></a>
                 <p>It uses advice slip API to fetch random quotes when the light emitting button get clicked or touched.</p>
             </div>
             <div class="project">
-                <a href="https://aftabalam162.github.io/50-projects/drum-kit/" >
+                <a href="https://aftabalam162.github.io/50-projects/drum-kit/" style="text-decoration: none;" >
                 <img src="assets/drumkit.png" class="proImage">
                 <h1>Drum Kit</h1></a>
                 <p>Event Handling concepts were used to make it and plays different music on different keystrokes. </p>
@@ -83,7 +83,7 @@
         <div class="contact-me">
             <h1>Contact Me</h1>
             <p>You can ping me through any media and I will reply as soon as possible </p>
-            <button class="btn" onclick="mailto:'name@gmail.com'"> Send Mail</button>
+            <a href="mailto:itsaftabalam37@gmail.com"><button class="btn">Send Mail</button></a>
         </div>
 
         
