--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- testing the code  -->
     <meta charset="UTF-8">
     <title>Aftab Alam</title>
     <link rel="stylesheet" href="css/style.css">
